syntax = "proto3";

package auth.v1;

option go_package = "sdk-microservices/gen/api/proto/auth/v1;authv1";

import "google/api/annotations.proto";

// AuthService provides user registration and token issuance.
service AuthService {
  // Register creates a new user.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  // Login verifies credentials and returns tokens.
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  // Validate checks an access token and returns the user identity.
  // Intended for internal use (gateway/auth middleware) but exposed for simplicity.
  rpc Validate(ValidateRequest) returns (ValidateResponse) {
    option (google.api.http) = {
      post: "/v1/auth/validate"
      body: "*"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 access_expires_in_seconds = 4;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string user_id = 1;
  string email = 2;
}
